<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HomeScreen"
        android:textSize="25dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/HomeButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HomeScreenButton1"/>
        <Button
            android:id="@+id/HomeButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HomeScreenButton2"/>
        <Button
            android:id="@+id/HomeButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HomeScreenButton3"/>


    </LinearLayout>


</LinearLayout>