<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainHallwayFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

            <TextView
                android:id="@+id/MainHallwayTextView"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MainHallway"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                    <Button
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/MainHallwayMainDoor"
                        android:id="@+id/EnterMainHallwayMainDoor"
                        android:layout_marginRight="5dp"/>
                    <Button
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/MainHallwayRustyDoor"
                        android:id="@+id/EnterMainHallwayRustyDoor"
                        android:layout_marginRight="5dp"/>

                    <Button
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/MainHallwayElectricDoor"
                        android:id="@+id/EnterMainHallwayOrnateDoor"/>

            </LinearLayout>

    </LinearLayout>


</FrameLayout>