<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainGameFragment2"
    >

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/MainGameScreenFragment2TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/MainGameScreenFragment2" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/MainGameScreenFragment2Button1"
                android:text="@string/MainGameScreenFragment2Button1"
                android:layout_marginRight="15dp"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/MainGameScreenFragment2Button2"
                android:text="@string/MainGameScreenFragment2Button2"/>


        </LinearLayout>



    </LinearLayout>

</FrameLayout>