<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrnateRoomFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
        android:id="@+id/OrnateRoomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/OrnateRoomText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/OrnateRoomShelfButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/OrnateRoomButton1"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/OrnateRoomCupboardButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/OrnateRoomButton2"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/OrnateRoomLeaveButton"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="Leave"/>


    </LinearLayout>


</LinearLayout>

</FrameLayout>